# manual-timing-recorder

./: README.md  pyproject.toml
docs/raw/: 0000__initial-spec.json
src/manual_timing_recorder/: __main__.py  gui.py
